# Offical_XeTuHanh

./: .gitignore  README.md  SPEC.md  pyproject.toml  requirements.txt
configs/: train.yaml
scripts/: eval_nuplan_closedloop.py  precompute_pca_basis.py  prepare_nuplan_cache.py  run_navsim_pdm_score.py
src/: config.py
src/data/: navsim_features.py  nuplan_dataset.py  transforms.py
src/eval/: __init__.py  navsim_agent.py
src/inference/: ode_solver.py  rollout.py
src/models/: action_decoder.py  dit.py  flow_matching.py  full_model.py  input_embedders.py  vjepa_wrapper.py
src/train/: losses.py  train.py
src/utils/: ema.py  logging.py
src/viz/: pca_latent.py
tests/: _helpers.py  test_joint_loss.py  test_noising.py  test_pca_viz.py  test_prepare.py  test_shapes.py
